--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,6 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+$btnmain   : #4c4cd4
+
 $primary   : #1976D2
 $secondary : #26A69A
 $accent    : #9C27B0
